# GNUSim8085

./: .gitignore  .travis.yml  AUTHORS  Brewfile  ChangeLog  GNUSim8085.desktop.in  GNUSim8085.glade  GNUSim8085.prj  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  README_OSX.md  TODO  WINDOWS-PORT.txt  aclocal.m4  autoclean.sh  autogen.sh  config.h.in  configure  configure.ac  configure.in  installer.nsi.in  meson.build  meson_cross_win32.txt  meson_options.txt  missing
data/: 8085asm.lang  Makefile.am  Makefile.in  gnusim8085.appdata.xml  meson.build
debian/: changelog  control  copyright  install  rules
doc/: Makefile.am  Makefile.in  asm-guide.txt  asm_reference.txt  gnusim8085.1  meson.build
doc/examples/: addwithcarry.asm  bcd2bin.asm  binarysearch.asm  debugexample.asm  division.asm  instructions_test.asm  nqueens.asm  readme.txt  sorting.asm  sumofnumbers.asm  swaphex.asm
doc/help/: Makefile.am  gnusim8085.xml  intro.xml  meson.build  ui.xml  userguide.md
docs/: Makefile.in
docs/examples/: bcd2bin.asm  debugexample.asm
m4/: ChangeLog
macos/: meson.build
macros/: ChangeLog  Makefile.am  Makefile.in  autogen.sh  compiler-flags.m4  gnome-common.m4  gnome-gettext.m4  gnome-x-checks.m4
osx/: Info.plist.in  gnusim8085.sh  meson.build
pixmaps/: Makefile.am  Makefile.in  meson.build
po/: COPYING  ChangeLog  GNUSim8085.pot  LINGUAS  Makefile.in.in  Makevars  Makevars.template  POTFILES.in  ar.po  ast.po  bn_BD.po  de.po  el.po  eo.po  es.po  fr.po  gnusim8085.pot  gu.po  hi.po  hu.po  it.po  ja.po  kn.po  lt.po  meson.build  mr.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  ta.po  th.po  zh_Hans.po  zh_Hant.po  zh_TW.po
src/: 8085-asm.c  8085-asm.h  8085-instructions.c  8085-instructions.h  8085-link.c  8085-link.h  8085-memblock.c  8085-memblock.h  8085.c  8085.h  CallTip.cxx  CallTip.h  CellBuffer.cxx  CellBuffer.h  ContractionState.cxx  Converter.h  Document.cxx  Document.h  DocumentAccessor.cxx  Editor.cxx  Editor.h  ExternalLexer.cxx  ExternalLexer.h  Indicator.cxx  KeyMap.cxx  KeyWords.cxx  KeyWords.h  LexAsm.cxx  LineMarker.h  Makefile.am  Makefile.in  PlatGTK.cxx  Platform.h  PropSet.cxx  RESearch.cxx  RESearch.h  SciLexer.h  Scintilla.h  ScintillaBase.cxx  ScintillaGTK.cxx  (+61 more)
tools/: gen_insts  gen_pcinc  glade_reinsert.c  replace.py  source_top.c  template.asm
