dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta - will be overwritten
dnl If you don't want it to overwrite it,
dnl 	Please disable it in the Anjuta project configuration

AC_INIT([gnusim8085], [1.3.6], [https://bugs.launchpad.net/gnusim8085])
m4_ifdef([AC_PACKAGE_URL],
	AC_PACKAGE_URL([http://gnusim8085.sourceforge.net/]),
	AC_DEFINE([PACKAGE_URL],["http://gnusim8085.sourceforge.net/"],["Website URL"])
	)
AC_CANONICAL_HOST
AM_INIT_AUTOMAKE([check-news])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

# Enable silent build when available (Automake 1.11)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_ISC_POSIX
AC_SUBST(CFLAGS,$CFLAGS)
AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_CC_C_O
AC_HEADER_STDC

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS([libintl.h stdlib.h string.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS([memset setlocale strtol strtoul])

dnl Checks for Additional stuffs.

case "${host}" in
        i[[3456789]]86-*-mingw32*) WIN32="yes" ;;
        *cygwin*) WIN32="yes" ;;
        *) WIN32="no" ;;
esac
AM_CONDITIONAL([WIN32], test "$WIN32" = "yes")

gtk_required="2.12.0"
gtksourceview2_required="2.2.0"

PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= $gtk_required],, [
    AC_MSG_ERROR(
    [
    Cannot find libgtk2.0 >= $gtk_required
    
        Please check the following:
    
         * Do you have the gtk+ development package installed?
           (usually called gtk2-devel for rpm based distros or
            libgtk2.0-dev for deb based distros or similar)
           If
               ls -l /usr/lib/pkgconfig/gtk+-2.0.pc
           reports that the file does not exist, then you are missing
           the development package.
    
    ])])

PKG_CHECK_MODULES(GTKSOURCEVIEW2, [gtksourceview-2.0 >= $gtksourceview2_required],, [
    AC_MSG_ERROR(
    [
    Cannot find gtksourceview2 >= $gtksourceview2_required
    
        Please check the following:
    
         * Do you have the gtksourceview2 development package installed?
           (usually called gtksourceview2-devel for rpm based distros or
            libgtksourceview2.0-dev for deb based distros or similar)
           If
               ls -l /usr/lib/pkgconfig/gtksourceview-2.0.pc
           reports that the file does not exist, then you are missing
           the development package.
    
    ])])
PKG_CHECK_EXISTS([gtksourceview-2.0 >= 2.8], [have_gsv_2_8=yes], [have_gsv_2_8=no])
if test "x$have_gsv_2_8" = "xyes"; then
	AC_DEFINE([GSV_2_8], [1], [gtksourceview2 version >= 2.8])
fi


AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTKSOURCEVIEW2_LIBS)
AC_SUBST(GTKSOURCEVIEW2_CFLAGS)

dnl Languages which your application supports
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION([0.17])

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
packagedatadir=share/${PACKAGE}
packagedocdir=share/doc/${PACKAGE}

dnl Set PACKAGE DIRs in config.h.
packagepixmapsdir=share/pixmaps/${PACKAGE}
packagehelpdir=share/gnome/help/${PACKAGE}
packagemenudir=share/gnome/apps

dnl Subst PACKAGE_DATA_DIR.
PACKAGE_DATA_DIR="${packageprefix}/${packagedatadir}"
AC_SUBST(PACKAGE_DATA_DIR)

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="${packageprefix}/${packagepixmapsdir}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst PACKAGE_HELP_DIR.
PACKAGE_HELP_DIR="${packageprefix}/${packagehelpdir}"
AC_SUBST(PACKAGE_HELP_DIR)

dnl Subst PACKAGE_MENU_DIR.
PACKAGE_MENU_DIR="${packageprefix}/${packagemenudir}"
AC_SUBST(PACKAGE_MENU_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}")
AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${packageprefix}/${packagepixmapsdir}")
AC_DEFINE_UNQUOTED(PACKAGE_HELP_DIR, "${packageprefix}/${packagehelpdir}")
AC_DEFINE_UNQUOTED(PACKAGE_MENU_DIR, "${packageprefix}/${packagemenudir}")
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
pixmaps/Makefile
doc/Makefile
data/Makefile
GNUSim8085.desktop
installer.nsi
])

