## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gnusim8085_docdir = $(prefix)/@NO_PREFIX_PACKAGE_DOC_DIR@

gnusim8085_doc_DATA = \
	asm-guide.txt\
	examples/README\
	examples/swaphex.asm\
	examples/nqueens.asm\
	examples/debugexample.asm\
	examples/bcd2bin.asm\
	gnusim8085.1\
	examples/addwithcarry.asm

EXTRA_DIST = $(gnusim8085_doc_DATA)
