## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gnusim8085_docdir = $(docdir)
gnusim8085_doc_DATA = asm-guide.txt

man_MANS = gnusim8085.1
dist_man_MANS = gnusim8085.1

gnusim8085_exampledir = $(docdir)/examples/
gnusim8085_example_DATA = examples/*

EXTRA_DIST = $(gnusim8085_doc_DATA) $(gnusim8085_example_DATA)
